--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,4 @@
 STORED_ID=34533204-0b09-3243-933e-3c84ab8a6cfb
 
-NEXT_PUBLIC_DOMAIN=https://bellagioharbison.com/
-NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/BellagioHarbisonNailSpa/
-NEXT_PUBLIC_ONLINE_BOOKING=https://booking.ezsalon.one/bellepalacegroup/bellagioharbison/booking/service
-NEXT_PUBLIC_API_DOMAIN=https://store-svc.ezsalon.one/
+NEXT_PUBLIC_DOMAIN=http://localhost:3000/
+NEXT_PUBLIC_API_DOMAIN=https://store-svc-demo.ezsalon.one/
