--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build ",
-        "start": "next start -p 8080",
+        "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
@@ -12,22 +12,27 @@
         "aos": "^3.0.0-beta.6",
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
+        "d3-request": "^1.0.6",
         "env-cmd": "^10.1.0",
         "next": "^12.0.4",
+        "node-xlsx": "^0.17.2",
         "photoswipe": "^4.1.3",
         "react": "17.0.2",
         "react-bootstrap": "^2.0.2",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-photoswipe-gallery": "^1.3.6",
-        "react-slideshow-image": "^3.6.0"
+        "react-slideshow-image": "^3.6.0",
+        "xlsx": "^0.17.4"
     },
     "devDependencies": {
         "@types/aos": "^3.0.4",
         "@types/node": "16.11.10",
+        "@types/node-xlsx": "^0.15.2",
         "@types/react": "17.0.37",
         "eslint": "7",
         "eslint-config-next": "12.0.4",
-        "typescript": "4.5.2"
+        "typescript": "4.5.2",
+        "url-loader": "^4.1.1"
     }
 }
